--- a/minil.toml
+++ b/minil.toml
@@ -1,5 +1,5 @@
 name = "RabbitMQ-Consumer-Batcher"
-# badges = ["travis"]
+badges = ["travis"]
 authority="cpan:JASEI"
 
 module_maker="ModuleBuildTiny"
